[package]
name = "blutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taap = "0.1.4"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
syntect = "5.2.0"
libc = { version = "0.2.155", features = ["extra_traits"] }
