[package]
name = "blutils"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taap = "0.1.4"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
syntect = "5.2.0"
libc = { version = "0.2.155", features = ["extra_traits"] }
fs_extra = "1.3.0"
walkdir = "2.5.0"
termsize = "0.1.9"
ansi_term = "0.12.1"
users = "0.11.0"
chrono = { version = "0.4.38", features = ["alloc", "clock"] }
regex = "1.10.6"
nix = { version = "0.29.0", features = ["fs"] }
[build-dependencies]
chrono = "0.4.38"
